src/test/ui/type-alias-impl-trait/no_revealing_outside_defining_module.stderr
error[E0308]: mismatched types
  --> $DIR/no_revealing_outside_defining_module.rs:15:19
   |
LL |     let _: &str = bomp();
   |                   ^^^^^^ expected &str, found opaque type
   |
   = note: expected type `&str`
              found type `Boo`

error[E0308]: mismatched types
  --> $DIR/no_revealing_outside_defining_module.rs:19:5
   |
LL | fn bomp() -> boo::Boo {
   |              -------- expected `Boo` because of return type
LL |     ""
   |     ^^ expected opaque type, found reference
   |
   = note: expected type `Boo`
              found type `&'static str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
